add schedule page

--- a/src/index.css
+++ b/src/index.css
@@ -7,3 +7,8 @@
 .scroll-bar-hidden::-webkit-scrollbar {
   display: none; /* Chrome, Safari, Opera */
 }
+.glow-today {
+  box-shadow: 0 0 10px 2px rgba(0, 255, 128, 0.5);
+  transition: all 0.3s ease-in-out;
+}
+
